[Fix] Sonarlint cleanup, security config update